--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
 <head>
 <meta charset="utf-8" />
 <title>Selena Gomez 中文网</title>
+<link rel="stylesheet" href="images/main.css" />
+<link rel="stylesheet" href="images/solo.css" />
 </head>
 <body>
+<div id="footer" class="footer">
+			<div>
+				<div style="text-align: right; vertical-align: top; float: right; margin: 6px;">
+					<a href="http://validator.w3.org/check/referer" style="color: white;">HTML 5</a> -
+							<a href="http://jigsaw.w3.org/css-validator/check/referer" style="color: white;">CSS 3</a>
+                </div>
+				<div style="text-align: left; vertical-align: top; float: left; margin: 6px;">
+					&copy; 2013 Selena Gomez 中文网 - 
+                    <a href="http://www.maxchan.info/" style="color: white;">designed by muski</a>
+				</div>
+			</div>
+		</div>
 </body>
 </html>
