--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
 <link rel="stylesheet" href="images/solo.css" />
 </head>
 <body>
+<div id="header" class="header">
+<div>
+	Selena Gomez 中文网 -
+    论坛 -
+    微博 -
+    新闻
+    </div>
+</div>
+<div id="body" style="padding: 6px 10px 6px">
+	Body
+</div>
 <div id="footer" class="footer">
 			<div>
 				<div style="text-align: right; vertical-align: top; float: right; margin: 6px;">
+                	<a href="contact.html" style="color: white;">联系</a> -
 					<a href="http://validator.w3.org/check/referer" style="color: white;">HTML 5</a> -
 							<a href="http://jigsaw.w3.org/css-validator/check/referer" style="color: white;">CSS 3</a>
                 </div>
