--- a/index.html
+++ b/index.html
@@ -6,15 +6,25 @@
 <link rel="stylesheet" href="images/main.css" />
 <link rel="stylesheet" href="images/solo.css" />
 </head>
-<body>
+<body> 
 <div id="header" class="header">
 	Selena Gomez 中文网 -
     论坛 -
     微博 -
     新闻
 </div>
-<div id="body" style="padding: 6px 10px 6px">
-	Body
+<div id="body">
+	<div id="big-header">
+    	<div style="color: white; background-color: black; text-align: center; padding: 6px 10px 6px">
+        	<img src="images/clobbered/bigheader.png" alt="Selena Gomez" style="max-height: 400px;"/>
+            <div>
+            <div class="sg-title">
+        		Selena Gomez China
+        	</div>
+            </div>
+        </div>
+        
+    </div>
 </div>
 <div id="footer" class="footer">
 			<div>
