--- a/index.html
+++ b/index.html
@@ -13,17 +13,51 @@
     微博 -
     新闻
 </div>
-<div id="body">
+<div id="body" style="padding: 48px 0px 48px">
 	<div id="big-header">
-    	<div style="color: white; background-color: black; text-align: center; padding: 6px 10px 6px">
+    	<div style="color: white; background-color: black; text-align: center; padding: 6px 10px 6px; clear: both;">
         	<img src="images/clobbered/bigheader.png" alt="Selena Gomez" style="max-height: 400px;"/>
-            <div>
             <div class="sg-title">
-        		Selena Gomez China
-        	</div>
+            	<div style="font-size: 70px;">
+        			Selena Gomez China
+        		</div>
+                <div>
+                	Bulletin -
+                    Tweets -
+                    News
+                </div>
             </div>
         </div>
-        
+    </div>
+    
+    <div style="overflow: auto; padding: 6px 10px">
+    <div style="float: left; width: 50%;">
+    	<h2 class="sg-title">Latest</h2>
+        <img src="images/clobbered/headlines/headline-1.jpg" style="max-width: 80%" /><br />
+        <img src="images/clobbered/headlines/headline-2.jpg" style="max-width: 80%" /><br />
+        <img src="images/clobbered/headlines/headline-3.jpg" style="max-width: 80%" /><br />
+    </div>
+    <div style="float: right; width: 50%">
+    	<h2 class="sg-title">News</h2>
+        <li>
+        	[资讯] Ed Sheeran 和 Selena Gomez 合作还是拍拖？
+		</li>
+		<li>
+        	[街拍] Selena 6 月 18 日洛杉矶街拍高清组图
+		</li>
+		<li>
+        	[其他] Harry Styles 最想和 Selena 约会！
+		</li>
+		<li>
+        	[图片] Selena 多伦多现场表演高清大图
+		</li>
+		<li>
+        	[翻唱] 又见翻唱
+		</li>
+		<li>
+        	[视频] Selena 做客 MuchMusic 现场舞蹈教学
+		</li>
+    </div>
     </div>
 </div>
 <div id="footer" class="footer">
