Added "Fork me on Github"

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 <div id="footer" class="footer">
 			<div>
 				<div style="text-align: right; vertical-align: top; float: right; margin: 6px;">
-                	<a href="contact.html" style="color: white;">联系</a> -
+                	<a href="https://github.com/xcvista/selenachina" style="color: white;">Fork me on Github</a> -
+                    <a href="contact.html" style="color: white;">联系</a> -
 					<a href="http://validator.w3.org/check/referer" style="color: white;">HTML 5</a> -
 							<a href="http://jigsaw.w3.org/css-validator/check/referer" style="color: white;">CSS 3</a>
                 </div>
