iOS 7 look, pink tint

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
 <div id="footer" class="footer">
 			<div>
 				<div style="text-align: right; vertical-align: top; float: right; margin: 6px;">
-                	<a href="https://github.com/xcvista/selenachina" style="color: white;">Fork me on Github</a> -
-                    <a href="contact.html" style="color: white;">联系</a> -
-					<a href="http://validator.w3.org/check/referer" style="color: white;">HTML 5</a> -
-							<a href="http://jigsaw.w3.org/css-validator/check/referer" style="color: white;">CSS 3</a>
+                	<a href="https://github.com/xcvista/selenachina" style="color: black;">Fork me on Github</a> -
+                    <a href="contact.html" style="color: black;">联系</a> -
+					<a href="http://validator.w3.org/check/referer" style="color: black;">HTML 5</a> -
+							<a href="http://jigsaw.w3.org/css-validator/check/referer" style="color: black;">CSS 3</a>
                 </div>
 				<div style="text-align: left; vertical-align: top; float: left; margin: 6px;">
 					&copy; 2013 Selena Gomez 中文网 - 
-                    <a href="http://www.maxchan.info/" style="color: white;">designed by muski</a>
+                    <a href="http://www.maxchan.info/" style="color: black;">designed by muski</a>
 				</div>
 			</div>
 		</div>
