--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body> 
 <div id="header" class="header">
-	Selena Gomez 中文网 -
-    论坛 -
-    微博 -
-    新闻
+	<img src="images/selenachina.gif" style="margin: 0px; max-height: 30px; float: left" />
+    <div style="float: right;">
+    	论坛 -
+    	微博 -
+    	新闻
+    </div>
 </div>
 <div id="body" style="padding: 48px 0px 48px">
 	<div id="big-header">
